@@ -37,6 +37,7 @@ S3method(hasRequires,Param)
 S3method(hasRequires,ParamSet)
 S3method(hasTrafo,Param)
 S3method(hasTrafo,ParamSet)
+S3method(isCharacter,Param)
 S3method(isCharacter,ParamSet)
 S3method(isDiscrete,Param)
 S3method(isDiscrete,ParamSet)
@@ -100,8 +101,10 @@ export(getParamSet)
 export(getParamTypeCounts)
 export(getParamTypes)
 export(getRequirements)
+export(getTypeStringsCharacter)
 export(getTypeStringsDiscrete)
 export(getTypeStringsInteger)
+export(getTypeStringsLogical)
 export(getTypeStringsNumeric)
 export(getTypeStringsNumericStrict)
 export(getUpper)
@@ -117,17 +120,24 @@ export(hasNumeric)
 export(hasRequires)
 export(hasTrafo)
 export(isCharacter)
+export(isCharacterTypeString)
 export(isDiscrete)
+export(isDiscreteTypeString)
 export(isEmpty)
 export(isFeasible)
 export(isForbidden)
 export(isInteger)
+export(isIntegerTypeString)
 export(isLogical)
+export(isLogicalTypeString)
 export(isNumeric)
 export(isNumericStrict)
+export(isNumericStrictTypeString)
+export(isNumericTypeString)
 export(isRequiresOk)
 export(isSpecialValue)
 export(isVector)
+export(isVectorTypeString)
 export(makeCharacterParam)
 export(makeCharacterVectorParam)
 export(makeDiscreteLearnerParam)
