@@ -1,0 +1,3 @@
+#' @param type [\code{character(1)}]\cr
+#'   Type string.
+
