@@ -1,0 +1,2 @@
+#' @return [\code{logical(1)}]
+
